--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,12 @@
     box-sizing: border-box;
   }
 
+
   .psswd-gen {
       display: flex;
       height: 100vh;
   }
 
-  #psswd-gen p {
+  #text {
       margin: auto;
   }
