--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,22 @@
       height: 100vh;
   }
 
+  .box {
+      display: flex;
+      margin: auto;
+      height: 500px;
+      width: 500px;
+      background-color: lightgray;
+      border: 1px solid gray;
+  }
+
   #text {
       margin: auto;
+      background-color: white;
+      width: 500px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
   }
