--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,13 @@
 
   #text {
       margin: auto;
+  }
+
+  .input-box {
       background-color: white;
       width: 500px;
       height: 50px;
       display: flex;
       justify-content: center;
       align-items: center;
-
   }
